--- a/lms/templates/courseware/progress.html
+++ b/lms/templates/courseware/progress.html
@@ -31,19 +31,6 @@ img.badgelet {
   border-radius: 3px;
 }
 
-img.badgelet:hover {
-  opacity: 0.6;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
-  filter:alpha(opacity=60);
-  -moz-opacity:0.6;
-  -khtml-opacity: 0.6;
-
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility:    hidden;
-  -ms-backface-visibility:     hidden;
-  backface-visibility:         hidden;
-}
-
 img.unlockable {
           filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
           filter: grayscale( 100% );
@@ -52,11 +39,11 @@ img.unlockable {
      -moz-filter: grayscale( 100% );
        -o-filter: grayscale( 100% );
       -ms-filter: grayscale( 100% );
-  opacity: 0.5;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  filter: alpha(opacity=50);
-  -moz-opacity:0.5;
-  -khtml-opacity: 0.5;
+  opacity: 0.7;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+  filter: alpha(opacity=70);
+  -moz-opacity:0.7;
+  -khtml-opacity: 0.7;
 }
 
 a small {
@@ -131,27 +118,29 @@ a.tooltipped:hover:before{
         <div id="grade-detail-graph" aria-hidden="true"></div>
       %endif
 
-      %if len(badge_data['unlockable_badgeclasses']) != 0 or len(badge_data['earned_badges']) != 0:
-        <hr />
-        <div style="position:relative; text-align:center;">
-          <div style="overflow-x:scroll; overflow-y:hidden; white-space:nowrap;">
-            <span style="padding-right:100px">&nbsp;</span>
-            %for i in range(len(badge_data['earned_badges'])):
-              <%badge = badge_data['earned_badges'][i]%>
-              <%badgeclass = badge.get('badge', {})%>
-              <%num = badgeclass.get('number_awarded')%>
-              <a href="./badges" class="tooltipped" title="${badgeclass.get('name')}"><img src="${badge.get('image', '')}" class="badgelet" />
-              </a>
-            %endfor
-            %for i in range(len(badge_data['unlockable_badgeclasses'])):
-              <%badgeclass = badge_data['unlockable_badgeclasses'][i]%>
-              <%num = badgeclass.get('number_awarded')%>
-              <a href="./badges"><img src="${badgeclass.get('image', '')}" class="badgelet unlockable" />
-              </a>
-            %endfor
-            <span style="padding-right:100px">&nbsp;</span>
+      %if badges_enabled:
+        %if len(badge_data['unlockable_badgeclasses']) != 0 or len(badge_data['earned_badges']) != 0:
+          <hr />
+          <div style="position:relative; text-align:center;">
+            <div style="overflow-x:scroll; overflow-y:hidden; white-space:nowrap;">
+              <span style="padding-right:100px">&nbsp;</span>
+              %for i in range(len(badge_data['earned_badges'])):
+                <%badge = badge_data['earned_badges'][i]%>
+                <%badgeclass = badge.get('badge', {})%>
+                <%num = badgeclass.get('number_awarded')%>
+                <a href="./badges" class="tooltipped" title="${badgeclass.get('name')}"><img src="${badge.get('image', '')}" class="badgelet" />
+                </a>
+              %endfor
+              %for i in range(len(badge_data['unlockable_badgeclasses'])):
+                <%badgeclass = badge_data['unlockable_badgeclasses'][i]%>
+                <%num = badgeclass.get('number_awarded')%>
+                <a href="./badges"><img src="${badgeclass.get('image', '')}" class="badgelet unlockable" />
+                </a>
+              %endfor
+              <span style="padding-right:100px">&nbsp;</span>
+            </div>
           </div>
-        </div>
+        %endif
       %endif
 
       <ol class="chapters">
