TTF temporary, only CMS changes
TODOD rever this

Signed-off-by: himangshuj <himangshu@sokratik.com>

Conflicts:
	cms/templates/activation_invalid.html
	cms/templates/index.html
	lms/static/images/header-logo.png

--- a/cms/templates/settings_advanced.html
+++ b/cms/templates/settings_advanced.html
@@ -84,9 +84,9 @@ editor.render();
     <aside class="content-supplementary" role="complimentary">
       <div class="bit">
         <h3 class="title-3">${_("How will these settings be used?")}</h3>
-        <p>${_("Manual policies are JSON-based key and value pairs that give you control over specific course settings that edX Studio will use when displaying and running your course.")}</p>
+        <p>${_("Manual policies are JSON-based key and value pairs that give you control over specific course settings that Sokratik will use when displaying and running your course.")}</p>
 
-        <p>${_("Any policies you modify here will override any other information you've defined elsewhere in Studio. With this in mind, please be very careful and do not edit policies that you are unfamiliar with (both their purpose and their syntax)")}.</p>
+        <p>${_("Any policies you modify here will override any other information you've defined elsewhere in Sokratik. With this in mind, please be very careful and do not edit policies that you are unfamiliar with (both their purpose and their syntax)")}.</p>
       </div>
 
       <div class="bit">
