--- a/cms/templates/settings.html
+++ b/cms/templates/settings.html
@@ -106,7 +106,7 @@ from contentstore import utils
 
           % if not about_page_editable:
           <div class="notice notice-incontext notice-workflow">
-            <h3 class="title">${_("Promoting Your Course with edX")}</h3>
+            <h3 class="title">${_("Promoting Your Course with Sokratik")}</h3>
             <div class="copy">
               <p>${_('Your course summary page will not be viewable until your course has been announced. To provide content for the page and preview it, follow the instructions provided by your <abbr title="Program Manager">PM</abbr> or Conrad Warre <a rel="email" class="action action-email" href="mailto:conrad@edx.org">(conrad@edx.org)</a>.')}</p>
             </div>
@@ -285,7 +285,7 @@ from contentstore import utils
         <h3 class="title-3">${_("How will these settings be used?")}</h3>
         <p>${_("Your course's schedule settings determine when students can enroll in and begin a course.")}</p>
 
-        <p>${_("Additionally, details provided on this page are also used in edX's catalog of courses, which new and returning students use to choose new courses to study.")}</p>
+        <p>${_("Additionally, details provided on this page are also used in Sokratik's catalog of courses, which new and returning students use to choose new courses to study.")}</p>
       </div>
 
       <div class="bit">
